--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer .container .footerContent .followUs a{
 
 .about-section .container .about-p{
     text-align: center;
-    margin-bottom: 35px;
+    margin-bottom: 55px;
 }
 
 .about-section .container .team-members{
@@ -235,3 +235,21 @@ footer .container .footerContent .followUs a{
     font-size: 25px;
     margin: 15px 0;
 }
+
+/* form section */
+
+input[type=text],[type=email],[type=number], textarea {
+    background: none;
+    outline: none;
+    display: block;
+    margin: 15px 0 25px;
+    padding: 7px;
+    width: 500px;
+    border-radius: 9px;
+}
+
+fieldset {
+    padding: 17px;
+}
+
+
